<resources>
    <string name="app_name">DistanceNeverMatters</string>
    <string name="title_activity_main_screen">MainScreenActivity</string>
    <string name="all">Todas</string>
    <string name="master">Master</string>
    <string name="player">Jugador</string>
    <string name="start">Inicio</string>
    <string name="joinGame">Unirse</string>
    <string name="startGame">Empezar</string>
    <string name="dicesSelected">Dados Seleccionados</string>
    <string name="game_name_placeholder">Nombre de la partida</string>
    <string name="game_description_placeholder">Descripción de la partida</string>
    <string name="name">Nombre</string>
    <string name="maps">Mapas</string>
    <string name="create">Crear</string>
    <string name="markers_models">Marcadores - Modelos</string>
    <string name="create_game_title">Crear partida</string>
    <string name="password">Contraseña</string>
    <string name="games">Partidas</string>
    <string name="register">Registro</string>
    <string name="regis">Registrarse</string>
    <string name="login">Iniciar Sesión</string>
    <string name="logoDescription">Logo de la aplicación DNM</string>
    <string name="username">Nombre de usuario</string>
    <string name="email">Correo electrónico</string>
    <string name="repeatPassword">Repetir contraseña</string>
    <string name="details">Detalles</string>
    <string name="invite">Invitar</string>
    <string name="delete">Eliminar partida</string>
    <string name="description">Descripción</string>
    <string name="game_name">Nombre de la partida</string>
    <string name="creationdate">Fecha de creación</string>
    <string name="player_list">Lista de Jugadores</string>
    <string name="game_list">Lista de Partidas</string>
    <string name="participants">Participantes</string>
    <string name="descriptionshort">Breve descripción de la Partida en unas cuantas líneas.</string>
    <string name="date">01/01/2019</string>
    <string name="player1">Jugador 1</string>
    <string name="player2">Jugador 2</string>
    <string name="logout">Cerrar sesión</string>
    <string name="edit">Editar</string>
    <string name="game_created">Partida creada</string>
    <string name="game_created_ok">¡Partida creada correctamente!</string>
    <string name="game_created_share">Código para compartir: </string>
    <string name="share_code">COMPARTIR</string>
    <string name="markers">Marcadores </string>
    <string name="models">Modelos</string>
    <string name="resources">Recursos</string>
    <string name="add">Añadir</string>
    <string name="help">Ayuda</string>
    <string name="perfil">Perfil</string>
    <string name="buscarPartida">Buscar Partida</string>
    <string name="buscar">Buscar</string>
    <string name="codigo">Código</string>
    <string name="entrar">Entrar</string>
    <string name="less">-</string>
    <string name="more">+</string>
    <string name="ningundado">Ningún dado seleccionado</string>
    <string name="resultado">Resultado</string>
    <string name="total">Total</string>
    <string name="desglose">Desglose</string>
    <string name="clear">Borrar</string>
    <string name="generardados">Calcular</string>
    <string name="historico">Histórico</string>
    <string name="historicotiradas">Histórico de tiradas</string>
    <string name="tirardados">Tirar dados</string>
    <string name="eulaTitle">Acuerdo de licencia</string>
    <string name="acceptEula">Aceptar</string>
    <string name="denyEula">Rechazar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok_sadface">Ok :(</string>
    <string name="no_camera">Cámara no disponible</string>
    <string name="camera_and_app_warning">Lo sentimos, DNM necesita una cámara y una app de captura de vídeo para funcionar.</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="save_game_details">Guardar los datos de la partida</string>
    <string name="save_game_details_exp">Está usted seguro de querer actualizar los datos de la partida?</string>
    <string name="action_idiom">Idioma</string>
    <string name="user">Usuario</string>
    <string name="find_game">Buscar partida</string>
    <string name="unirsecodigotexto">Si tienes el código de alguna partida puedes introducirlo aquí para unirte a ella!</string>
</resources>