<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_find"
            android:icon="@mipmap/ic_find"
            android:title="@string/find_game" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/help" />
    </group>

    <item android:title="@string/user">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@mipmap/ic_profile"
                android:title="@string/perfil" />
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@mipmap/ic_sing_out"
                android:title="@string/logout" />

        </menu>
    </item>

</menu>
