<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:background="@color/common_google_signin_btn_text_dark_disabled">


    <TextView
        android:id="@+id/markerModelItemModel"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginStart="7dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorPrimary"
        android:text="@string/models"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/markerModelItemMarker"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/markerModelItemMarker"
        android:layout_width="170dp"
        android:layout_height="41dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        android:text="@string/markers"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/markerModelDeleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:contentDescription="@string/markers_models"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close_red_24dp" />
</android.support.constraint.ConstraintLayout>